<resources>
    <string name="app_name">AvayaCountyCouncil</string>


    <string name="LOGO">LOGO</string>
    <string name="JOB">JOB</string>
    <string name="TRANSPORT">TRANSPORT</string>
    <string name="NEWS">NEWS</string>
    <string name="SOCIAL">SOCIAL</string>
    <string name="MAPS">MAPS</string>
    <string name="COUNCILTAX">COUNCIL TAX</string>
    <string name="BIN">BIN COLLECTION</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">"Avaya Council Sign in "</string>
</resources>
