<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu1Activity">




    <ImageButton
        android:id="@+id/imageButtonTransport2"
        android:layout_width="wrap_content"
        android:layout_height="138dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="418dp"
        android:background="#7BD513"
        android:contentDescription="@string/TRANSPORT"
        android:padding="4dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/transport" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="156dp"
        android:layout_height="138dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="418dp"
        android:background="#60BFEA"
        android:contentDescription="@string/MAPS"
        android:padding="4dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/maps" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="213dp"
        android:layout_height="196dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="194dp"
        android:layout_marginRight="194dp"
        android:layout_marginBottom="216dp"
        android:background="#60A1D5"
        android:contentDescription="@string/COUNCILTAX"
        android:padding="-1dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/counciltax18" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="320dp"
        android:background="#C539DD"
        android:contentDescription="@string/BIN"
        android:padding="-1dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bin2" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="93dp"
        android:background="#F3BB13"
        android:contentDescription="@string/JOB"
        android:padding="3dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/jobs" />


    <ImageButton
        android:id="@+id/imageButtonReport"
        android:layout_width="172dp"
        android:layout_height="117dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="92dp"
        android:background="#1898A8"
        android:padding="3dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/error_icon_3" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="77dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="282dp"
        android:layout_marginRight="282dp"
        android:layout_marginBottom="6dp"
        app:fab_addButtonColorNormal="@color/pink"
        app:fab_addButtonColorPressed="@color/pink_pressed"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_labelStyle="@style/floatingActionButton1">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_icon="@drawable/phone123"
            app:fab_size="mini"
            app:fab_title="Phone" />


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_icon="@drawable/message123"
            app:fab_size="mini"
            app:fab_title="Chat" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_icon="@drawable/ic_video"
            app:fab_size="mini"
            app:fab_title="Video" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="563dp"
        app:srcCompat="@drawable/avayacountycouncil2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="182dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="220dp"
        android:background="#A32603"
        android:contentDescription="@string/NEWS"
        android:padding="-1dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/newspaper" />







</RelativeLayout>